ulottie-compiler/tests/snapshots/frame_snapshot__blend_multiply.snap
---
source: ulottie-compiler/tests/frame_snapshot.rs
expression: snap
---
=== sample t=0 frame=0 ===
Frame frame=0.000000 composition=1080x2330 fr=25.000000
  Layer #1 "Top Shape With Multiply" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 540.000000 1165.000000]
    Group transform=[1.000000 0.000000 0.000000 1.000000 4.000000 -261.000000] opacity=1.000000
      Path d="M304.000000,-304.000000 L304.000000,304.000000 L-304.000000,304.000000 L-304.000000,-304.000000 L304.000000,-304.000000 Z"
        Stroke color=rgba(0.996078,0.996078,0.996078,1.000000) opacity=100.000000 width=0.000000 lc=1 lj=1 ml=4.000000
        Fill color=rgba(0.108820,0.687484,0.956863,1.000000) opacity=100.000000
  Layer #2 "Shape With Outline" ty=4 opacity=1.000000 visible=true
    transform=[0.707107 -0.707107 0.707107 0.707107 345.101984 924.450181]
    Group transform=[1.000000 0.000000 0.000000 1.000000 -74.000000 327.000000] opacity=1.000000
      Path d="M150.000000,-150.000000 L150.000000,150.000000 L-150.000000,150.000000 L-150.000000,-150.000000 L150.000000,-150.000000 Z"
        Stroke color=rgba(0.000000,0.000000,0.000000,1.000000) opacity=100.000000 width=24.000000 lc=1 lj=1 ml=4.000000
        Fill color=rgba(0.109804,0.686275,0.956863,1.000000) opacity=100.000000
  Layer #3 "BKG" ty=1 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Unsupported layer ty=1

=== sample t=0.25 frame=12 ===
Frame frame=12.000000 composition=1080x2330 fr=25.000000
  Layer #1 "Top Shape With Multiply" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 540.000000 1165.000000]
    Group transform=[1.000000 0.000000 0.000000 1.000000 4.000000 -261.000000] opacity=1.000000
      Path d="M304.000000,-304.000000 L304.000000,304.000000 L-304.000000,304.000000 L-304.000000,-304.000000 L304.000000,-304.000000 Z"
        Stroke color=rgba(0.996078,0.996078,0.996078,1.000000) opacity=100.000000 width=0.000000 lc=1 lj=1 ml=4.000000
        Fill color=rgba(0.108820,0.687484,0.956863,1.000000) opacity=100.000000
  Layer #2 "Shape With Outline" ty=4 opacity=1.000000 visible=true
    transform=[0.707107 -0.707107 0.707107 0.707107 345.101984 1023.977071]
    Group transform=[1.000000 0.000000 0.000000 1.000000 -74.000000 327.000000] opacity=1.000000
      Path d="M150.000000,-150.000000 L150.000000,150.000000 L-150.000000,150.000000 L-150.000000,-150.000000 L150.000000,-150.000000 Z"
        Stroke color=rgba(0.000000,0.000000,0.000000,1.000000) opacity=100.000000 width=24.000000 lc=1 lj=1 ml=4.000000
        Fill color=rgba(0.109804,0.686275,0.956863,1.000000) opacity=100.000000
  Layer #3 "BKG" ty=1 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Unsupported layer ty=1

=== sample t=0.5 frame=25 ===
Frame frame=25.000000 composition=1080x2330 fr=25.000000
  Layer #1 "Top Shape With Multiply" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 540.000000 1165.000000]
    Group transform=[1.000000 0.000000 0.000000 1.000000 4.000000 -261.000000] opacity=1.000000
      Path d="M304.000000,-304.000000 L304.000000,304.000000 L-304.000000,304.000000 L-304.000000,-304.000000 L304.000000,-304.000000 Z"
        Stroke color=rgba(0.996078,0.996078,0.996078,1.000000) opacity=100.000000 width=0.000000 lc=1 lj=1 ml=4.000000
        Fill color=rgba(0.108820,0.687484,0.956863,1.000000) opacity=100.000000
  Layer #2 "Shape With Outline" ty=4 opacity=1.000000 visible=true
    transform=[0.707107 -0.707107 0.707107 0.707107 345.101984 1160.450181]
    Group transform=[1.000000 0.000000 0.000000 1.000000 -74.000000 327.000000] opacity=1.000000
      Path d="M150.000000,-150.000000 L150.000000,150.000000 L-150.000000,150.000000 L-150.000000,-150.000000 L150.000000,-150.000000 Z"
        Stroke color=rgba(0.000000,0.000000,0.000000,1.000000) opacity=100.000000 width=24.000000 lc=1 lj=1 ml=4.000000
        Fill color=rgba(0.109804,0.686275,0.956863,1.000000) opacity=100.000000
  Layer #3 "BKG" ty=1 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Unsupported layer ty=1

=== sample t=0.75 frame=37 ===
Frame frame=37.000000 composition=1080x2330 fr=25.000000
  Layer #1 "Top Shape With Multiply" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 540.000000 1165.000000]
    Group transform=[1.000000 0.000000 0.000000 1.000000 4.000000 -261.000000] opacity=1.000000
      Path d="M304.000000,-304.000000 L304.000000,304.000000 L-304.000000,304.000000 L-304.000000,-304.000000 L304.000000,-304.000000 Z"
        Stroke color=rgba(0.996078,0.996078,0.996078,1.000000) opacity=100.000000 width=0.000000 lc=1 lj=1 ml=4.000000
        Fill color=rgba(0.108820,0.687484,0.956863,1.000000) opacity=100.000000
  Layer #2 "Shape With Outline" ty=4 opacity=1.000000 visible=true
    transform=[0.707107 -0.707107 0.707107 0.707107 345.101984 1042.450181]
    Group transform=[1.000000 0.000000 0.000000 1.000000 -74.000000 327.000000] opacity=1.000000
      Path d="M150.000000,-150.000000 L150.000000,150.000000 L-150.000000,150.000000 L-150.000000,-150.000000 L150.000000,-150.000000 Z"
        Stroke color=rgba(0.000000,0.000000,0.000000,1.000000) opacity=100.000000 width=24.000000 lc=1 lj=1 ml=4.000000
        Fill color=rgba(0.109804,0.686275,0.956863,1.000000) opacity=100.000000
  Layer #3 "BKG" ty=1 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Unsupported layer ty=1

=== sample t=0.99 frame=49 ===
Frame frame=49.000000 composition=1080x2330 fr=25.000000
  Layer #1 "Top Shape With Multiply" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 540.000000 1165.000000]
    Group transform=[1.000000 0.000000 0.000000 1.000000 4.000000 -261.000000] opacity=1.000000
      Path d="M304.000000,-304.000000 L304.000000,304.000000 L-304.000000,304.000000 L-304.000000,-304.000000 L304.000000,-304.000000 Z"
        Stroke color=rgba(0.996078,0.996078,0.996078,1.000000) opacity=100.000000 width=0.000000 lc=1 lj=1 ml=4.000000
        Fill color=rgba(0.108820,0.687484,0.956863,1.000000) opacity=100.000000
  Layer #2 "Shape With Outline" ty=4 opacity=1.000000 visible=true
    transform=[0.707107 -0.707107 0.707107 0.707107 345.101984 924.450181]
    Group transform=[1.000000 0.000000 0.000000 1.000000 -74.000000 327.000000] opacity=1.000000
      Path d="M150.000000,-150.000000 L150.000000,150.000000 L-150.000000,150.000000 L-150.000000,-150.000000 L150.000000,-150.000000 Z"
        Stroke color=rgba(0.000000,0.000000,0.000000,1.000000) opacity=100.000000 width=24.000000 lc=1 lj=1 ml=4.000000
        Fill color=rgba(0.109804,0.686275,0.956863,1.000000) opacity=100.000000
  Layer #3 "BKG" ty=1 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Unsupported layer ty=1
