ulottie-compiler/tests/snapshots/frame_snapshot__boucing_ball.snap
---
source: ulottie-compiler/tests/frame_snapshot.rs
assertion_line: 72
expression: snap
---
=== sample t=0 frame=0 ===
Frame frame=0.000000 composition=1080x1080 fr=30.000000
  Layer #2 "Ball" ty=4 opacity=1.000000 visible=true
    transform=[0.400000 0.000000 0.000000 0.400000 492.160000 842.445000]
    Group transform=[1.000000 0.000000 0.000000 1.000000 128.975000 64.975000] opacity=1.000000
      Path d="M206.975000,0.000000 L206.975000,0.000000 C206.975000,114.229502 114.229502,206.975000 0.000000,206.975000 L0.000000,206.975000 C-114.229502,206.975000 -206.975000,114.229502 -206.975000,0.000000 L-206.975000,0.000000 C-206.975000,-114.229502 -114.229502,-206.975000 0.000000,-206.975000 L0.000000,-206.975000 C114.229502,-206.975000 206.975000,-114.229502 206.975000,0.000000 Z"
        Fill color=rgba(0.388235,0.827451,0.749020,1.000000) opacity=100.000000
  Layer #3 "BG" ty=1 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Unsupported layer ty=1

=== sample t=0.25 frame=15 ===
Frame frame=15.000000 composition=1080x1080 fr=30.000000
  Layer #2 "Ball" ty=4 opacity=1.000000 visible=true
    transform=[0.303803 0.000000 0.000000 0.488181 504.567016 250.704271]
    Group transform=[1.000000 0.000000 0.000000 1.000000 128.975000 64.975000] opacity=1.000000
      Path d="M206.975000,0.000000 L206.975000,0.000000 C206.975000,114.229502 114.229502,206.975000 0.000000,206.975000 L0.000000,206.975000 C-114.229502,206.975000 -206.975000,114.229502 -206.975000,0.000000 L-206.975000,0.000000 C-206.975000,-114.229502 -114.229502,-206.975000 0.000000,-206.975000 L0.000000,-206.975000 C114.229502,-206.975000 206.975000,-114.229502 206.975000,0.000000 Z"
        Fill color=rgba(0.388235,0.827451,0.749020,1.000000) opacity=100.000000
  Layer #3 "BG" ty=1 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Unsupported layer ty=1

=== sample t=0.5 frame=30 ===
Frame frame=30.000000 composition=1080x1080 fr=30.000000
  Layer #2 "Ball" ty=4 opacity=1.000000 visible=true
    transform=[0.400000 0.000000 0.000000 0.400000 492.160000 172.445000]
    Group transform=[1.000000 0.000000 0.000000 1.000000 128.975000 64.975000] opacity=1.000000
      Path d="M206.975000,0.000000 L206.975000,0.000000 C206.975000,114.229502 114.229502,206.975000 0.000000,206.975000 L0.000000,206.975000 C-114.229502,206.975000 -206.975000,114.229502 -206.975000,0.000000 L-206.975000,0.000000 C-206.975000,-114.229502 -114.229502,-206.975000 0.000000,-206.975000 L0.000000,-206.975000 C114.229502,-206.975000 206.975000,-114.229502 206.975000,0.000000 Z"
        Fill color=rgba(0.388235,0.827451,0.749020,1.000000) opacity=100.000000
  Layer #3 "BG" ty=1 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Unsupported layer ty=1

=== sample t=0.75 frame=45 ===
Frame frame=45.000000 composition=1080x1080 fr=30.000000
  Layer #2 "Ball" ty=4 opacity=1.000000 visible=true
    transform=[0.400000 0.000000 0.000000 0.400000 492.160000 261.141618]
    Group transform=[1.000000 0.000000 0.000000 1.000000 128.975000 64.975000] opacity=1.000000
      Path d="M206.975000,0.000000 L206.975000,0.000000 C206.975000,114.229502 114.229502,206.975000 0.000000,206.975000 L0.000000,206.975000 C-114.229502,206.975000 -206.975000,114.229502 -206.975000,0.000000 L-206.975000,0.000000 C-206.975000,-114.229502 -114.229502,-206.975000 0.000000,-206.975000 L0.000000,-206.975000 C114.229502,-206.975000 206.975000,-114.229502 206.975000,0.000000 Z"
        Fill color=rgba(0.388235,0.827451,0.749020,1.000000) opacity=100.000000
  Layer #3 "BG" ty=1 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Unsupported layer ty=1

=== sample t=0.99 frame=60 ===
Frame frame=60.000000 composition=1080x1080 fr=30.000000
  Layer #2 "Ball" ty=4 opacity=1.000000 visible=true
    transform=[0.381237 0.000000 0.000000 0.417199 494.579914 837.767704]
    Group transform=[1.000000 0.000000 0.000000 1.000000 128.975000 64.975000] opacity=1.000000
      Path d="M206.975000,0.000000 L206.975000,0.000000 C206.975000,114.229502 114.229502,206.975000 0.000000,206.975000 L0.000000,206.975000 C-114.229502,206.975000 -206.975000,114.229502 -206.975000,0.000000 L-206.975000,0.000000 C-206.975000,-114.229502 -114.229502,-206.975000 0.000000,-206.975000 L0.000000,-206.975000 C114.229502,-206.975000 206.975000,-114.229502 206.975000,0.000000 Z"
        Fill color=rgba(0.388235,0.827451,0.749020,1.000000) opacity=100.000000
  Layer #3 "BG" ty=1 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Unsupported layer ty=1
