ulottie-compiler/tests/snapshots/frame_snapshot__bouncy_ball.snap
---
source: ulottie-compiler/tests/frame_snapshot.rs
expression: snap
---
=== sample t=0 frame=0 ===
Frame frame=0.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Group transform=[1.000000 0.000000 0.000000 1.000000 31.000000 -63.000000] opacity=1.000000
      Path d="M204.000000,92.500000 C246.249783,92.500000 280.500000,126.750217 280.500000,169.000000 C280.500000,211.249783 246.249783,245.500000 204.000000,245.500000 C161.750217,245.500000 127.500000,211.249783 127.500000,169.000000 C127.500000,126.750217 161.750217,92.500000 204.000000,92.500000 Z"
        Fill color=rgba(0.710000,0.192000,0.278000,1.000000) opacity=100.000000

=== sample t=0.25 frame=30 ===
Frame frame=30.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Group transform=[1.000000 0.000000 0.000000 1.000000 41.695850 56.436997] opacity=1.000000
      Path d="M204.000000,92.500000 C246.249783,92.500000 280.500000,126.750217 280.500000,169.000000 C280.500000,211.249783 246.249783,245.500000 204.000000,245.500000 C161.750217,245.500000 127.500000,211.249783 127.500000,169.000000 C127.500000,126.750217 161.750217,92.500000 204.000000,92.500000 Z"
        Fill color=rgba(0.710000,0.192000,0.278000,1.000000) opacity=100.000000

=== sample t=0.5 frame=60 ===
Frame frame=60.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Group transform=[1.360000 0.000000 0.000000 0.590000 -12.440000 341.290000] opacity=1.000000
      Path d="M204.000000,92.500000 C246.249783,92.500000 280.500000,126.750217 280.500000,169.000000 C280.500000,211.249783 246.249783,245.500000 204.000000,245.500000 C161.750217,245.500000 127.500000,211.249783 127.500000,169.000000 C127.500000,126.750217 161.750217,92.500000 204.000000,92.500000 Z"
        Fill color=rgba(0.710000,0.192000,0.278000,1.000000) opacity=100.000000

=== sample t=0.75 frame=90 ===
Frame frame=90.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Group transform=[1.000000 0.000000 0.000000 1.000000 41.695850 56.436997] opacity=1.000000
      Path d="M204.000000,92.500000 C246.249783,92.500000 280.500000,126.750217 280.500000,169.000000 C280.500000,211.249783 246.249783,245.500000 204.000000,245.500000 C161.750217,245.500000 127.500000,211.249783 127.500000,169.000000 C127.500000,126.750217 161.750217,92.500000 204.000000,92.500000 Z"
        Fill color=rgba(0.710000,0.192000,0.278000,1.000000) opacity=100.000000

=== sample t=0.99 frame=118 ===
Frame frame=118.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Group transform=[1.000000 0.000000 0.000000 1.000000 31.092161 -61.970871] opacity=1.000000
      Path d="M204.000000,92.500000 C246.249783,92.500000 280.500000,126.750217 280.500000,169.000000 C280.500000,211.249783 246.249783,245.500000 204.000000,245.500000 C161.750217,245.500000 127.500000,211.249783 127.500000,169.000000 C127.500000,126.750217 161.750217,92.500000 204.000000,92.500000 Z"
        Fill color=rgba(0.710000,0.192000,0.278000,1.000000) opacity=100.000000
