ulottie-compiler/tests/snapshots/frame_snapshot__ellipse.snap
---
source: ulottie-compiler/tests/frame_snapshot.rs
expression: snap
---
=== sample t=0 frame=0 ===
Frame frame=0.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Path d="M256.000000,128.000000 C326.692448,128.000000 384.000000,185.307552 384.000000,256.000000 C384.000000,326.692448 326.692448,384.000000 256.000000,384.000000 C185.307552,384.000000 128.000000,326.692448 128.000000,256.000000 C128.000000,185.307552 185.307552,128.000000 256.000000,128.000000 Z"
      Stroke color=rgba(1.000000,0.980392,0.282353,1.000000) opacity=100.000000 width=30.000000 lc=2 lj=2 ml=0.000000

=== sample t=0.25 frame=45 ===
Frame frame=45.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Path d="M256.000000,128.000000 C326.692448,128.000000 384.000000,185.307552 384.000000,256.000000 C384.000000,326.692448 326.692448,384.000000 256.000000,384.000000 C185.307552,384.000000 128.000000,326.692448 128.000000,256.000000 C128.000000,185.307552 185.307552,128.000000 256.000000,128.000000 Z"
      Stroke color=rgba(1.000000,0.980392,0.282353,1.000000) opacity=100.000000 width=30.000000 lc=2 lj=2 ml=0.000000

=== sample t=0.5 frame=90 ===
Frame frame=90.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Path d="M256.000000,128.000000 C326.692448,128.000000 384.000000,185.307552 384.000000,256.000000 C384.000000,326.692448 326.692448,384.000000 256.000000,384.000000 C185.307552,384.000000 128.000000,326.692448 128.000000,256.000000 C128.000000,185.307552 185.307552,128.000000 256.000000,128.000000 Z"
      Stroke color=rgba(1.000000,0.980392,0.282353,1.000000) opacity=100.000000 width=30.000000 lc=2 lj=2 ml=0.000000

=== sample t=0.75 frame=135 ===
Frame frame=135.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Path d="M256.000000,128.000000 C326.692448,128.000000 384.000000,185.307552 384.000000,256.000000 C384.000000,326.692448 326.692448,384.000000 256.000000,384.000000 C185.307552,384.000000 128.000000,326.692448 128.000000,256.000000 C128.000000,185.307552 185.307552,128.000000 256.000000,128.000000 Z"
      Stroke color=rgba(1.000000,0.980392,0.282353,1.000000) opacity=100.000000 width=30.000000 lc=2 lj=2 ml=0.000000

=== sample t=0.99 frame=178 ===
Frame frame=178.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Path d="M256.000000,128.000000 C326.692448,128.000000 384.000000,185.307552 384.000000,256.000000 C384.000000,326.692448 326.692448,384.000000 256.000000,384.000000 C185.307552,384.000000 128.000000,326.692448 128.000000,256.000000 C128.000000,185.307552 185.307552,128.000000 256.000000,128.000000 Z"
      Stroke color=rgba(1.000000,0.980392,0.282353,1.000000) opacity=100.000000 width=30.000000 lc=2 lj=2 ml=0.000000
