ulottie-compiler/tests/snapshots/frame_snapshot__fill.snap
---
source: ulottie-compiler/tests/frame_snapshot.rs
expression: snap
---
=== sample t=0 frame=0 ===
Frame frame=0.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Path d="M125.516418,452.202985 L240.716418,38.686567 L435.868657,447.904478 L42.125373,173.659701 L460.800000,156.465672 L125.516418,452.202985 Z"
      Fill color=rgba(1.000000,0.980000,0.280000,1.000000) opacity=100.000000

=== sample t=0.25 frame=45 ===
Frame frame=45.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Path d="M125.516418,452.202985 L240.716418,38.686567 L435.868657,447.904478 L42.125373,173.659701 L460.800000,156.465672 L125.516418,452.202985 Z"
      Fill color=rgba(1.000000,0.980000,0.280000,1.000000) opacity=100.000000

=== sample t=0.5 frame=90 ===
Frame frame=90.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Path d="M125.516418,452.202985 L240.716418,38.686567 L435.868657,447.904478 L42.125373,173.659701 L460.800000,156.465672 L125.516418,452.202985 Z"
      Fill color=rgba(1.000000,0.980000,0.280000,1.000000) opacity=100.000000

=== sample t=0.75 frame=135 ===
Frame frame=135.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Path d="M125.516418,452.202985 L240.716418,38.686567 L435.868657,447.904478 L42.125373,173.659701 L460.800000,156.465672 L125.516418,452.202985 Z"
      Fill color=rgba(1.000000,0.980000,0.280000,1.000000) opacity=100.000000

=== sample t=0.99 frame=178 ===
Frame frame=178.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Path d="M125.516418,452.202985 L240.716418,38.686567 L435.868657,447.904478 L42.125373,173.659701 L460.800000,156.465672 L125.516418,452.202985 Z"
      Fill color=rgba(1.000000,0.980000,0.280000,1.000000) opacity=100.000000
