ulottie-compiler/tests/snapshots/frame_snapshot__rectangle.snap
---
source: ulottie-compiler/tests/frame_snapshot.rs
assertion_line: 66
expression: snap
---
=== sample t=0 frame=0 ===
Frame frame=0.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Path d="M384.000000,128.000000 L128.000000,128.000000 L128.000000,384.000000 L384.000000,384.000000 L384.000000,128.000000 Z"
      Stroke color=rgba(1.000000,0.980392,0.282353,1.000000) opacity=100.000000 width=30.000000 lc=2 lj=2 ml=0.000000

=== sample t=0.25 frame=45 ===
Frame frame=45.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Path d="M384.000000,128.000000 L128.000000,128.000000 L128.000000,384.000000 L384.000000,384.000000 L384.000000,128.000000 Z"
      Stroke color=rgba(1.000000,0.980392,0.282353,1.000000) opacity=100.000000 width=30.000000 lc=2 lj=2 ml=0.000000

=== sample t=0.5 frame=90 ===
Frame frame=90.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Path d="M384.000000,128.000000 L128.000000,128.000000 L128.000000,384.000000 L384.000000,384.000000 L384.000000,128.000000 Z"
      Stroke color=rgba(1.000000,0.980392,0.282353,1.000000) opacity=100.000000 width=30.000000 lc=2 lj=2 ml=0.000000

=== sample t=0.75 frame=135 ===
Frame frame=135.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Path d="M384.000000,128.000000 L128.000000,128.000000 L128.000000,384.000000 L384.000000,384.000000 L384.000000,128.000000 Z"
      Stroke color=rgba(1.000000,0.980392,0.282353,1.000000) opacity=100.000000 width=30.000000 lc=2 lj=2 ml=0.000000

=== sample t=0.99 frame=178 ===
Frame frame=178.000000 composition=512x512 fr=60.000000
  Layer #0 "Layer" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 0.000000 0.000000]
    Path d="M384.000000,128.000000 L128.000000,128.000000 L128.000000,384.000000 L384.000000,384.000000 L384.000000,128.000000 Z"
      Stroke color=rgba(1.000000,0.980392,0.282353,1.000000) opacity=100.000000 width=30.000000 lc=2 lj=2 ml=0.000000
