ulottie-compiler/tests/snapshots/frame_snapshot__text_baseline.snap
---
source: ulottie-compiler/tests/frame_snapshot.rs
expression: snap
---
=== sample t=0 frame=0 ===
Frame frame=0.000000 composition=200x200 fr=30.000000
  Layer #1 "M 2" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 111.000000 130.000000]
    Group transform=[1.000000 0.000000 0.000000 1.000000 0.000000 -10.000000] opacity=1.000000
      Path d="M16.553000,0.000000 L16.553000,-60.938000 L37.256000,0.000000 L45.801000,0.000000 L66.602000,-59.912000 L66.602000,0.000000 L75.732000,0.000000 L75.732000,-71.582000 L62.988000,-71.582000 L45.850000,-21.777000 C44.124000,-16.731000 42.854000,-12.907000 42.041000,-10.303000 C41.325000,-12.647000 40.186000,-16.178000 38.623000,-20.898000 L21.680000,-71.582000 L7.422000,-71.582000 L7.422000,0.000000 L16.553000,0.000000 Z"
        Fill color=rgba(0.270000,0.030000,0.890000,1.000000) opacity=100.000000
  Layer #2 "M" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 3.000000 130.000000]
    Path d="M16.553000,0.000000 L16.553000,-60.938000 L37.256000,0.000000 L45.801000,0.000000 L66.602000,-59.912000 L66.602000,0.000000 L75.732000,0.000000 L75.732000,-71.582000 L62.988000,-71.582000 L45.850000,-21.777000 C44.124000,-16.731000 42.854000,-12.907000 42.041000,-10.303000 C41.325000,-12.647000 40.186000,-16.178000 38.623000,-20.898000 L21.680000,-71.582000 L7.422000,-71.582000 L7.422000,0.000000 L16.553000,0.000000 Z"
      Fill color=rgba(0.270000,0.030000,0.890000,1.000000) opacity=100.000000
  Layer #3 "Yellow Solid 1" ty=1 opacity=1.000000 visible=true
    transform=[1.220000 0.000000 0.000000 0.490000 6.500000 57.750000]
    Unsupported layer ty=1

=== sample t=0.25 frame=30 ===
Frame frame=30.000000 composition=200x200 fr=30.000000
  Layer #1 "M 2" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 111.000000 130.000000]
    Group transform=[1.000000 0.000000 0.000000 1.000000 0.000000 -10.000000] opacity=1.000000
      Path d="M16.553000,0.000000 L16.553000,-60.938000 L37.256000,0.000000 L45.801000,0.000000 L66.602000,-59.912000 L66.602000,0.000000 L75.732000,0.000000 L75.732000,-71.582000 L62.988000,-71.582000 L45.850000,-21.777000 C44.124000,-16.731000 42.854000,-12.907000 42.041000,-10.303000 C41.325000,-12.647000 40.186000,-16.178000 38.623000,-20.898000 L21.680000,-71.582000 L7.422000,-71.582000 L7.422000,0.000000 L16.553000,0.000000 Z"
        Fill color=rgba(0.270000,0.030000,0.890000,1.000000) opacity=100.000000
  Layer #2 "M" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 3.000000 130.000000]
    Path d="M16.553000,0.000000 L16.553000,-60.938000 L37.256000,0.000000 L45.801000,0.000000 L66.602000,-59.912000 L66.602000,0.000000 L75.732000,0.000000 L75.732000,-71.582000 L62.988000,-71.582000 L45.850000,-21.777000 C44.124000,-16.731000 42.854000,-12.907000 42.041000,-10.303000 C41.325000,-12.647000 40.186000,-16.178000 38.623000,-20.898000 L21.680000,-71.582000 L7.422000,-71.582000 L7.422000,0.000000 L16.553000,0.000000 Z"
      Fill color=rgba(0.270000,0.030000,0.890000,1.000000) opacity=100.000000
  Layer #3 "Yellow Solid 1" ty=1 opacity=1.000000 visible=true
    transform=[1.220000 0.000000 0.000000 0.490000 6.500000 57.750000]
    Unsupported layer ty=1

=== sample t=0.5 frame=60 ===
Frame frame=60.000000 composition=200x200 fr=30.000000
  Layer #1 "M 2" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 111.000000 130.000000]
    Group transform=[1.000000 0.000000 0.000000 1.000000 0.000000 -10.000000] opacity=1.000000
      Path d="M16.553000,0.000000 L16.553000,-60.938000 L37.256000,0.000000 L45.801000,0.000000 L66.602000,-59.912000 L66.602000,0.000000 L75.732000,0.000000 L75.732000,-71.582000 L62.988000,-71.582000 L45.850000,-21.777000 C44.124000,-16.731000 42.854000,-12.907000 42.041000,-10.303000 C41.325000,-12.647000 40.186000,-16.178000 38.623000,-20.898000 L21.680000,-71.582000 L7.422000,-71.582000 L7.422000,0.000000 L16.553000,0.000000 Z"
        Fill color=rgba(0.270000,0.030000,0.890000,1.000000) opacity=100.000000
  Layer #2 "M" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 3.000000 130.000000]
    Path d="M16.553000,0.000000 L16.553000,-60.938000 L37.256000,0.000000 L45.801000,0.000000 L66.602000,-59.912000 L66.602000,0.000000 L75.732000,0.000000 L75.732000,-71.582000 L62.988000,-71.582000 L45.850000,-21.777000 C44.124000,-16.731000 42.854000,-12.907000 42.041000,-10.303000 C41.325000,-12.647000 40.186000,-16.178000 38.623000,-20.898000 L21.680000,-71.582000 L7.422000,-71.582000 L7.422000,0.000000 L16.553000,0.000000 Z"
      Fill color=rgba(0.270000,0.030000,0.890000,1.000000) opacity=100.000000
  Layer #3 "Yellow Solid 1" ty=1 opacity=1.000000 visible=true
    transform=[1.220000 0.000000 0.000000 0.490000 6.500000 57.750000]
    Unsupported layer ty=1

=== sample t=0.75 frame=90 ===
Frame frame=90.000000 composition=200x200 fr=30.000000
  Layer #1 "M 2" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 111.000000 130.000000]
    Group transform=[1.000000 0.000000 0.000000 1.000000 0.000000 -10.000000] opacity=1.000000
      Path d="M16.553000,0.000000 L16.553000,-60.938000 L37.256000,0.000000 L45.801000,0.000000 L66.602000,-59.912000 L66.602000,0.000000 L75.732000,0.000000 L75.732000,-71.582000 L62.988000,-71.582000 L45.850000,-21.777000 C44.124000,-16.731000 42.854000,-12.907000 42.041000,-10.303000 C41.325000,-12.647000 40.186000,-16.178000 38.623000,-20.898000 L21.680000,-71.582000 L7.422000,-71.582000 L7.422000,0.000000 L16.553000,0.000000 Z"
        Fill color=rgba(0.270000,0.030000,0.890000,1.000000) opacity=100.000000
  Layer #2 "M" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 3.000000 130.000000]
    Path d="M16.553000,0.000000 L16.553000,-60.938000 L37.256000,0.000000 L45.801000,0.000000 L66.602000,-59.912000 L66.602000,0.000000 L75.732000,0.000000 L75.732000,-71.582000 L62.988000,-71.582000 L45.850000,-21.777000 C44.124000,-16.731000 42.854000,-12.907000 42.041000,-10.303000 C41.325000,-12.647000 40.186000,-16.178000 38.623000,-20.898000 L21.680000,-71.582000 L7.422000,-71.582000 L7.422000,0.000000 L16.553000,0.000000 Z"
      Fill color=rgba(0.270000,0.030000,0.890000,1.000000) opacity=100.000000
  Layer #3 "Yellow Solid 1" ty=1 opacity=1.000000 visible=true
    transform=[1.220000 0.000000 0.000000 0.490000 6.500000 57.750000]
    Unsupported layer ty=1

=== sample t=0.99 frame=118 ===
Frame frame=118.000000 composition=200x200 fr=30.000000
  Layer #1 "M 2" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 111.000000 130.000000]
    Group transform=[1.000000 0.000000 0.000000 1.000000 0.000000 -10.000000] opacity=1.000000
      Path d="M16.553000,0.000000 L16.553000,-60.938000 L37.256000,0.000000 L45.801000,0.000000 L66.602000,-59.912000 L66.602000,0.000000 L75.732000,0.000000 L75.732000,-71.582000 L62.988000,-71.582000 L45.850000,-21.777000 C44.124000,-16.731000 42.854000,-12.907000 42.041000,-10.303000 C41.325000,-12.647000 40.186000,-16.178000 38.623000,-20.898000 L21.680000,-71.582000 L7.422000,-71.582000 L7.422000,0.000000 L16.553000,0.000000 Z"
        Fill color=rgba(0.270000,0.030000,0.890000,1.000000) opacity=100.000000
  Layer #2 "M" ty=4 opacity=1.000000 visible=true
    transform=[1.000000 0.000000 0.000000 1.000000 3.000000 130.000000]
    Path d="M16.553000,0.000000 L16.553000,-60.938000 L37.256000,0.000000 L45.801000,0.000000 L66.602000,-59.912000 L66.602000,0.000000 L75.732000,0.000000 L75.732000,-71.582000 L62.988000,-71.582000 L45.850000,-21.777000 C44.124000,-16.731000 42.854000,-12.907000 42.041000,-10.303000 C41.325000,-12.647000 40.186000,-16.178000 38.623000,-20.898000 L21.680000,-71.582000 L7.422000,-71.582000 L7.422000,0.000000 L16.553000,0.000000 Z"
      Fill color=rgba(0.270000,0.030000,0.890000,1.000000) opacity=100.000000
  Layer #3 "Yellow Solid 1" ty=1 opacity=1.000000 visible=true
    transform=[1.220000 0.000000 0.000000 0.490000 6.500000 57.750000]
    Unsupported layer ty=1
